# XAGUSD-RL-Trader

./: .gitignore  README.md  env.example  pyproject.toml
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js
dashboard/src/: App.tsx
dashboard/src/api/: client.ts
dashboard/src/components/Charts/: PriceChart.tsx
dashboard/src/components/Controls/: AgentControl.tsx
dashboard/src/components/Layout/: Header.tsx  Layout.tsx  Sidebar.tsx
dashboard/src/components/Logs/: LogStream.tsx
dashboard/src/components/Metrics/: MetricsPanel.tsx
dashboard/src/components/Position/: PositionCard.tsx
dashboard/src/hooks/: useWebSocket.ts
dashboard/src/pages/: Dashboard.tsx  History.tsx  Training.tsx
dashboard/src/store/: themeStore.ts  tradingStore.ts
dashboard/src/styles/: globals.css
data/historical/: .gitkeep
logs/trades/: .gitkeep
scripts/: backtest.py  live_trade.py  pretrain.py
src/: __init__.py  main.py
src/agent/: __init__.py  ppo_agent.py  rollout_buffer.py  trainer.py
src/config/: __init__.py  constants.py  settings.py
src/data/: __init__.py  candle.py  csv_loader.py  match_trader_client.py  preprocessor.py
src/environment/: __init__.py  position_manager.py  reward_calculator.py  trading_env.py
src/models/: __init__.py  actor_critic.py  components.py  distributions.py  lstm_attention.py
src/server/: __init__.py  app.py  dependencies.py  schemas.py  websocket_manager.py
src/server/routes/: __init__.py  agent.py  checkpoint.py  data.py  training.py
src/utils/: __init__.py  checkpoint.py  logging.py  metrics.py
tests/: __init__.py  conftest.py  test_environment.py  test_models.py
