[project]
name = "xagusd-rl-trader"
version = "0.1.0"
description = "Deep RL Trading System for XAGUSD using LSTM-Attention and PPO"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Developer" }
]
keywords = ["trading", "reinforcement-learning", "lstm", "ppo", "xagusd"]

dependencies = [
    # Deep Learning
    "torch>=2.1.0",
    "numpy>=1.24.0",
    
    # Data Processing
    "pandas>=2.0.0",
    "polars>=0.20.0",
    
    # RL Environment
    "gymnasium>=0.29.0",
    
    # API Server
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "python-multipart>=0.0.6",
    
    # Configuration & Validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    
    # HTTP Client
    "httpx>=0.26.0",
    "aiofiles>=23.2.0",
    
    # Logging & Monitoring
    "structlog>=24.1.0",
    "tensorboard>=2.15.0",
    "rich>=13.7.0",
    
    # Utilities
    "typer>=0.9.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
trader = "src.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

